Fixed vertical align of text in buttons

--- a/css/dbjr.css
+++ b/css/dbjr.css
@@ -463,7 +463,7 @@ body > footer .contact {
   box-sizing: border-box;
   min-width: 30px;
   min-height: 30px;
-  padding: .25em .5em;
+  padding: .3em .5em .1em;
   font: normal 1.538em/100% "Yanone Kaffeesatz", sans-serif;
   text-transform: uppercase;
   text-decoration: none;
@@ -497,7 +497,7 @@ body > footer .contact {
 .btn:active,
 .btn.active {
   padding-top: .35em;
-  padding-bottom: .15em;
+  padding-bottom: .05em;
   color: #000000;
   background: #fc9026 none;
   -webkit-box-shadow: inset 0 0.2em 0 rgba(0, 0, 0, 0.2);
@@ -527,7 +527,7 @@ p .btn {
 .btn-primary:active,
 .btn-primary.active {
   padding-top: .35em;
-  padding-bottom: .15em;
+  padding-bottom: .05em;
   color: #000000;
   background: #00cbff none;
   -webkit-box-shadow: inset 0 0.2em 0 rgba(0, 0, 0, 0.2);
@@ -582,6 +582,8 @@ p .btn {
   display: inline-block;
 }
 .btn.btn-extend {
+  padding-top: .25em;
+  padding-bottom: .25em;
   font: normal 1em/100% Arial, sans-serif;
   text-transform: none;
   border-top: 1px solid #f7f7f7;
@@ -589,11 +591,6 @@ p .btn {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-}
-.btn.btn-extend:active,
-.btn.btn-extend.active {
-  padding-top: .25em;
-  padding-bottom: .25em;
 }
 .dropdown-menu {
   padding: 1em;
